--- a/vue-news/资源笔记/项目问题.md
+++ b/vue-news/资源笔记/项目问题.md
@@ -6,11 +6,20 @@
 
 * 引入flexible.js做移动端适配
   * [参考使用](https://blog.csdn.net/z1712636234/article/details/77881685)
+  * [[vue-cli的移动端适配插件flexible](http://www.cnblogs.com/nanjie/p/8532326.html)
+  * ​
 * 使用scss来写css
   * [参考链接](https://www.cnblogs.com/rainheader/p/6505366.html)
   * [scss-rem](https://blog.csdn.net/qq_40190624/article/details/79536733)
   * [常见sass的mixin1](https://www.w3cplus.com/preprocessor/ten-best-common-mixins.html)
   * [常见sass的mixin2](https://blog.csdn.net/u013909970/article/details/52231026)
   * ​
-* ​
+* 移动端适配问题
+  * [使用Flexible实现手淘H5页面的终端适配](https://www.w3cplus.com/mobile/lib-flexible-for-html5-layout.html)
+  * [再聊移动端页面的适配](https://www.w3cplus.com/css/vw-for-layout.html)
+  * [如何在Vue项目中使用vw实现移动端适配](https://www.w3cplus.com/mobile/vw-layout-in-vue.html)
+  * [lib-flexible](https://github.com/amfe/lib-flexible)
+  * [基于vue-cli配置lib-flexible + rem实现移动端自适应](http://www.jb51.net/article/131534.htm)
+  * [手机不能访问8080](https://www.cnblogs.com/wangyanhua95/p/7954019.html)
+  * ​
 
