完成详情内容

--- a/vue-news/资源笔记/项目问题.md
+++ b/vue-news/资源笔记/项目问题.md
@@ -2,6 +2,7 @@
 
 * 模仿项目
   * [vue-news](https://github.com/biaodigit/vue-news)
+  * [开放API]()
 
 
 * 引入flexible.js做移动端适配
@@ -21,6 +22,7 @@
   * [lib-flexible](https://github.com/amfe/lib-flexible)
   * [基于vue-cli配置lib-flexible + rem实现移动端自适应](http://www.jb51.net/article/131534.htm)
   * [手机不能访问8080](https://www.cnblogs.com/wangyanhua95/p/7954019.html)
-  * ​
+
+    ​
 
 
