--- a/vue-news/资源笔记/项目问题.md
+++ b/vue-news/资源笔记/项目问题.md
@@ -2,7 +2,7 @@
 
 * 模仿项目
   * [vue-news](https://github.com/biaodigit/vue-news)
-  * [开放API]()
+  * [开放API](http://www.360doc.com/content/18/0128/00/8772388_725662139.shtml)
 
 
 * 引入flexible.js做移动端适配
